--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+
     <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>com.anurag</groupId>
-        <artifactId>maven</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
     <groupId>com.anurag</groupId>
-    <artifactId>parent-project</artifactId>
+    <artifactId>maven</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>parent-project</name>
+    <name>maven</name>
     <url>http://maven.apache.org</url>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <modules>
-        <module>sub-project-1</module>
-        <module>sub-project-2</module>
+        <module>maven-quickstart-project</module>
+        <module>parent-project</module>
     </modules>
 
 </project>
