--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+        
+  
+  <modelVersion>4.0.0</modelVersion>
+        
+  
+  <groupId>com.anurag</groupId>
+        
+  
+  <artifactId>maven</artifactId>
+        
+  
+  <packaging>pom</packaging>
+        
+  
+  <version>1.0-SNAPSHOT</version>
+        
+  
+  <name>maven</name>
+        
+  
+  <url>http://maven.apache.org</url>
+        
+  
+  <dependencies>
 
-
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.anurag</groupId>
-    <artifactId>maven</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>maven</name>
-    <url>http://maven.apache.org</url>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <modules>
-        <module>maven-quickstart-project</module>
-        <module>parent-project</module>
-    </modules>
+  </dependencies>
+        
+  
+  <modules>
+                
+    
+    <module>maven-quickstart-project</module>
+                
+    
+    <module>parent-project</module>
+          
+    
+    <module>maven-webapp-project</module>
+      
+  </modules>
+    
 
 </project>
