--- a/maven-multi-module-project/sub-project-2/pom.xml
+++ b/maven-multi-module-project/sub-project-2/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.anurag</groupId>
-    <artifactId>parent-project</artifactId>
+    <artifactId>maven-multi-module-project</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.anurag</groupId>
-  <artifactId>sub-project-1</artifactId>
+  <artifactId>sub-project-2</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>sub-project-1</name>
+  <name>sub-project-2</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
