--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-        
-  
-  <modelVersion>4.0.0</modelVersion>
-        
-  
-  <groupId>com.anurag</groupId>
-        
-  
-  <artifactId>maven</artifactId>
-        
-  
-  <packaging>pom</packaging>
-        
-  
-  <version>1.0-SNAPSHOT</version>
-        
-  
-  <name>maven</name>
-        
-  
-  <url>http://maven.apache.org</url>
-        
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  </dependencies>
-        
-  
-  <modules>
-                
-    
-    <module>maven-quickstart-project</module>
-    <module>maven-multi-module-project</module>
-    <module>maven-webapp-project</module>
-      
-  </modules>
-    
+
+    <modelVersion>4.0.0</modelVersion>
+
+
+    <groupId>com.anurag</groupId>
+
+
+    <artifactId>maven</artifactId>
+
+
+    <packaging>pom</packaging>
+
+
+    <version>1.0-SNAPSHOT</version>
+
+
+    <name>maven</name>
+
+
+    <url>http://maven.apache.org</url>
+
+
+    <dependencies>
+
+    </dependencies>
+
+
+    <modules>
+
+        <module>maven-1-quickstart-project</module>
+        <module>maven-2-webapp-project</module>
+        <module>maven-3-multi-module-project</module>
+        <module>maven-4-unit-test-project</module>
+
+    </modules>
+
 
 </project>
